Ansatz für Straßenlänge

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "[49371 rows x 9 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
        "[913 rows x 9 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -714,13 +714,13 @@
        "[2358 rows x 9 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Datensatz auf nur Kreuzungspunkte reduzieren (Komplett)\n",
+    "# Datensatz auf nur Kreuzungspunkte reduzieren\n",
     "all_node_ids = []\n",
     "for node_ids_list in ways_filter['node_ids']:\n",
     "    if node_ids_list is not None:\n",
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,14 +759,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\samu2\\AppData\\Local\\Temp\\ipykernel_23756\\767023666.py:33: SettingWithCopyWarning:\n",
+      "C:\\Users\\samu2\\AppData\\Local\\Temp\\ipykernel_13748\\767023666.py:33: SettingWithCopyWarning:\n",
       "\n",
       "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -976,13 +976,13 @@
        "[2093 rows x 9 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Knoten zusammenfügen, die nah beieinander sind (Entfernungen auf 15 Meter)\n",
+    "# Knoten zusammenfügen, die nah beieinander sind (Entfernungen auf 5 Meter)\n",
     "\n",
     "# Knoten zusammenfügen\n",
     "def merge_close_nodes(df_nodes, ways_filter, threshold):\n",
@@ -1036,37 +1036,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Länge der einzelnen Straßen ausrechnen\n",
+    "# Länge der einzelnen ursprünglichen Straßen ausrechnen und Knoten vom Grad 2 entfernen\n",
     "\n",
-    "# Funktion zur Berechnung der Straßenlänge basierend auf den referenzierten Knoten\n",
-    "def calculate_road_length(way_row, df_nodes):\n",
-    "    first_node_id = way_row['node_ids'][0]\n",
-    "    last_node_id = way_row['node_ids'][-1]\n",
+    "# Straßenlänge berechnen\n",
+    "def calculate_full_road_length(way_row, df_nodes):\n",
+    "    node_ids = way_row['node_ids']\n",
+    "    total_length = 0\n",
     "\n",
-    "    # Überprüfe, ob der erste Knoten im DataFrame existiert\n",
-    "    first_node = df_nodes[df_nodes['id'] == first_node_id]\n",
-    "    if first_node.empty:\n",
-    "        print(f\"Warnung: Erster Knoten mit ID {first_node_id} nicht gefunden!\")\n",
-    "        return 0 \n",
+    "    for i in range(len(node_ids) - 1):\n",
+    "        first_node = df_nodes[df_nodes['id'] == node_ids[i]]\n",
+    "        second_node = df_nodes[df_nodes['id'] == node_ids[i + 1]]\n",
     "\n",
-    "    # Überprüfe, ob der letzte Knoten im DataFrame existiert\n",
-    "    last_node = df_nodes[df_nodes['id'] == last_node_id]\n",
-    "    if last_node.empty:\n",
-    "        print(f\"Warnung: Letzter Knoten mit ID {last_node_id} nicht gefunden!\")\n",
-    "        return 0 \n",
+    "        # Überprüfung, ob beide Knoten existieren\n",
+    "        if first_node.empty or second_node.empty:\n",
+    "            print(f\"Warnung: Knoten {node_ids[i]} oder {node_ids[i + 1]} nicht gefunden!\")\n",
+    "            continue\n",
     "\n",
-    "    # Berechne die Entfernung zwischen den Knoten\n",
-    "    length = haversine(first_node['longitude'].values[0], first_node['latitude'].values[0],\n",
-    "                       last_node['longitude'].values[0], last_node['latitude'].values[0])\n",
-    "    return length\n",
+    "        total_length += haversine(\n",
+    "            first_node['longitude'].values[0], first_node['latitude'].values[0],\n",
+    "            second_node['longitude'].values[0], second_node['latitude'].values[0]\n",
+    "        )\n",
     "\n",
-    "filtered_data_combined['road_length'] = filtered_data_combined[filtered_data_combined['type'] == 'way'].apply(calculate_road_length, axis=1, df_nodes=df_cluster_nodes)\n",
-    "filtered_data_combined"
+    "    return total_length\n",
+    "\n",
+    "# Knoten vom Grad 2 entfernen\n",
+    "def remove_degree2_nodes(ways_filter, df_nodes, G):\n",
+    "    road_data = []\n",
+    "\n",
+    "    for _, way in ways_filter.iterrows():\n",
+    "        road_length = calculate_full_road_length(way, df_nodes)\n",
+    "\n",
+    "        node_ids = way['node_ids']\n",
+    "        filtered_node_ids = [node_id for node_id in node_ids if G.degree[node_id] > 2 or node_id in (node_ids[0], node_ids[-1])]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -17171,6 +17177,39 @@
     "df_cluster_nodes = df_cluster_nodes.drop(columns='cluster')\n",
     "\n",
     "filtered_data_combined = pd.concat([ways_filter, df_cluster_nodes], ignore_index=True)\n",
+    "filtered_data_combined"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Funktion zur Berechnung der Straßenlänge basierend auf den referenzierten Knoten\n",
+    "def calculate_road_length(way_row, df_nodes):\n",
+    "    first_node_id = way_row['node_ids'][0]\n",
+    "    last_node_id = way_row['node_ids'][-1]\n",
+    "\n",
+    "    # Überprüfe, ob der erste Knoten im DataFrame existiert\n",
+    "    first_node = df_nodes[df_nodes['id'] == first_node_id]\n",
+    "    if first_node.empty:\n",
+    "        print(f\"Warnung: Erster Knoten mit ID {first_node_id} nicht gefunden!\")\n",
+    "        return 0 \n",
+    "\n",
+    "    # Überprüfe, ob der letzte Knoten im DataFrame existiert\n",
+    "    last_node = df_nodes[df_nodes['id'] == last_node_id]\n",
+    "    if last_node.empty:\n",
+    "        print(f\"Warnung: Letzter Knoten mit ID {last_node_id} nicht gefunden!\")\n",
+    "        return 0 \n",
+    "\n",
+    "    # Berechne die Entfernung zwischen den Knoten\n",
+    "    length = haversine(first_node['longitude'].values[0], first_node['latitude'].values[0],\n",
+    "                       last_node['longitude'].values[0], last_node['latitude'].values[0])\n",
+    "    return length\n",
+    "\n",
+    "filtered_data_combined['road_length'] = filtered_data_combined[filtered_data_combined['type'] == 'way'].apply(calculate_road_length, axis=1, df_nodes=df_cluster_nodes)\n",
     "filtered_data_combined"
    ]
   }
