Change structure of cells

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -250,26 +250,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test1 = filtered_data_multiple[filtered_data_multiple['id'] == 5018106995]\n",
-    "test1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = filtered_data_multiple[filtered_data_multiple['node_ids'].apply(lambda x: 5018106995 in x if isinstance(x, list) else False)]\n",
-    "test"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -327,27 +307,6 @@
     "plt.xlabel(\"Längengrad\")\n",
     "plt.ylabel(\"Breitengrad\")\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nodes_degree_2 = [node for node, degree in G.degree() if degree == 2]\n",
-    "\n",
-    "node_way_mapping = {node_id: [] for node_id in nodes_degree_2}\n",
-    "\n",
-    "for index, way in ways_filter.iterrows():\n",
-    "    node_ids_list = way['node_ids']\n",
-    "    if node_ids_list is not None:\n",
-    "        for node_id in nodes_degree_2:\n",
-    "            if node_id in node_ids_list:\n",
-    "                node_way_mapping[node_id].append(way['id'])\n",
-    "\n",
-    "for node_id, way_ids in node_way_mapping.items():\n",
-    "    print(f\"Knoten-ID {node_id} wird in den folgenden Wegen referenziert: {way_ids}\")"
    ]
   },
   {
@@ -483,7 +442,28 @@
     "                else:\n",
     "                    print(f\"Straße {way.iloc[0]['tagvalue']} (ID: {way_id}) referenziert den Knoten {node_id}, ist jedoch nicht im Graphen gezeichnet.\")\n",
     "            else:\n",
-    "                print(f\"Keine Straße gefunden für Knoten {node_id} und Way-ID {way_id}.\")\n",
+    "                print(f\"Keine Straße gefunden für Knoten {node_id} und Way-ID {way_id}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes_degree_2 = [node for node, degree in G.degree() if degree == 2]\n",
+    "\n",
+    "node_way_mapping = {node_id: [] for node_id in nodes_degree_2}\n",
+    "\n",
+    "for index, way in ways_filter.iterrows():\n",
+    "    node_ids_list = way['node_ids']\n",
+    "    if node_ids_list is not None:\n",
+    "        for node_id in nodes_degree_2:\n",
+    "            if node_id in node_ids_list:\n",
+    "                node_way_mapping[node_id].append(way['id'])\n",
+    "\n",
+    "for node_id, way_ids in node_way_mapping.items():\n",
+    "    print(f\"Knoten-ID {node_id} wird in den folgenden Wegen referenziert: {way_ids}\")\n",
     "\n",
     "special_degree_2_nodes = identify_special_degree_2_nodes(node_way_mapping)\n",
     "get_connected_ways_for_special_nodes(special_degree_2_nodes, ways_filter, G)"
