Find neighbours of special 2 degree nodes

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "[16973 rows x 9 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
        "[305 rows x 9 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +842,7 @@
        "[764 rows x 9 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1212,13 +1212,61 @@
       "Straße track (ID: 724444001) ist im Graphen gezeichnet und mit Knoten 5018106995 verbunden.\n",
       "Knoten 9440708402 ist an den folgenden Straßen beteiligt, die im Graphen gezeichnet wurden:\n",
       "Straße residential (ID: 23007688) ist im Graphen gezeichnet und mit Knoten 9440708402 verbunden.\n",
-      "Verbundene Wege pro speziellen Knoten: {275211517: [], 290985239: [161713928], 290985269: [26548471, 26674975], 292552743: [26674971], 1736723109: [26548468, 513321151], 3426707592: [35693143, 378642681], 3426708465: [], 3426708503: [335572712, 335572730], 5018106995: [513321148, 724444001], 9440708402: [23007688]}\n"
+      "Nachbarn von speziellen Grad-2-Knoten (Grad >= 3, ohne Duplikate):\n",
+      "{275211517: [], 290985239: [], 290985269: [6900831072, 3426708495], 292552743: [1736723112, 248048867], 1736723109: [1736723112, 5018106996], 3426707592: [59649402], 3426708465: [], 3426708503: [269356169, 3426708534], 5018106995: [841468498, 5018106996], 9440708402: [448231553, 570856930]}\n"
      ]
     }
    ],
    "source": [
-    "def handle_special_degree_2_nodes():\n",
-    "    return None\n",
+    "def handle_special_degree_2_nodes(special_nodes, connected_ways, G):\n",
+    "    # Dictionary zum Speichern der gefundenen Nachbarn pro speziellen Knoten\n",
+    "    neighbors_by_special_node = {}\n",
+    "\n",
+    "    def find_special_neighbors(node_id, connected_node_ids, visited=None, found_neighbors=None):\n",
+    "        if visited is None:\n",
+    "            visited = set()\n",
+    "        if found_neighbors is None:\n",
+    "            found_neighbors = set()  # Set zum Vermeiden von Duplikaten\n",
+    "\n",
+    "        visited.add(node_id)\n",
+    "        neighbors = list(G.neighbors(node_id))\n",
+    "\n",
+    "        for neighbor in neighbors:\n",
+    "            if neighbor not in visited and neighbor in connected_node_ids:  # Check nur für Nachbarn in connected_node_ids\n",
+    "                neighbor_degree = G.degree(neighbor)\n",
+    "\n",
+    "                # Füge Nachbarn hinzu, wenn er Grad 3 oder höher hat\n",
+    "                if neighbor_degree >= 3:\n",
+    "                    found_neighbors.add(neighbor)  # Hinzufügen zu Set\n",
+    "\n",
+    "                    # Stoppe, wenn zwei passende Nachbarn gefunden wurden\n",
+    "                    if len(found_neighbors) == 2:\n",
+    "                        return list(found_neighbors)\n",
+    "\n",
+    "                # Rekursive Suche fortsetzen, wenn der Nachbar Grad 2 hat\n",
+    "                elif neighbor_degree == 2:\n",
+    "                    result = find_special_neighbors(neighbor, connected_node_ids, visited, found_neighbors)\n",
+    "                    if len(result) == 2:\n",
+    "                        return list(result)\n",
+    "\n",
+    "        return list(found_neighbors)\n",
+    "\n",
+    "    # Für jeden speziellen Knoten die Nachbarn durch verbundene Wege finden\n",
+    "    for node_id, ways in connected_ways.items():\n",
+    "        neighbors_by_special_node[node_id] = []\n",
+    "        # Sammle alle Knoten-IDs, die in den verbundenen Wegen vorkommen\n",
+    "        connected_node_ids = set()\n",
+    "        for way_id in ways:\n",
+    "            way = ways_filter[ways_filter['id'] == way_id]\n",
+    "            if not way.empty:\n",
+    "                connected_node_ids.update(way.iloc[0]['node_ids'])\n",
+    "\n",
+    "        # Suche Nachbarn des speziellen Knotens, die Grad 3+ haben und in connected_node_ids liegen\n",
+    "        neighbors = find_special_neighbors(node_id, connected_node_ids)\n",
+    "        if neighbors:\n",
+    "            neighbors_by_special_node[node_id].extend(neighbors)\n",
+    "\n",
+    "    return neighbors_by_special_node\n",
     "\n",
     "# Identifizieren der speziellen Grad-2-Knoten\n",
     "def identify_special_degree_2_nodes(node_way_mapping):\n",
@@ -1251,7 +1299,11 @@
     "    return connected_ways_by_node\n",
     "\n",
     "special_nodes = identify_special_degree_2_nodes(node_way_mapping)\n",
-    "connected_ways = get_connected_ways_for_special_nodes(special_nodes, ways_filter, G)"
+    "connected_ways = get_connected_ways_for_special_nodes(special_nodes, ways_filter, G)\n",
+    "neighbors_by_special_node = handle_special_degree_2_nodes(special_nodes, connected_ways, G)\n",
+    "\n",
+    "print(\"Nachbarn von speziellen Grad-2-Knoten (Grad >= 3, ohne Duplikate):\")\n",
+    "print(neighbors_by_special_node)"
    ]
   },
   {
