Successfull deletion of all degree 2 nodes and connection between other nodes

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -556,17 +556,22 @@
     "                node_way_mapping[node_id] = [row['id']]\n",
     "special_nodes = identify_special_degree_2_nodes(node_way_mapping)\n",
     "\n",
+    "# Datensatz aufgeteilt nach normal und speziell Knoten\n",
+    "df_degree_2_nodes = filtered_data_multiple[filtered_data_multiple['id'].isin(degree_2_node_ids)]\n",
+    "special_node_ids = set(special_nodes.keys()) \n",
+    "df_special_nodes = filtered_data_multiple[filtered_data_multiple['id'].isin(special_node_ids)]\n",
+    "\n",
     "# Straßen mit speziellen Knoten ermitteln\n",
-    "connected_ways = get_connected_ways_for_special_nodes(special_nodes, ways_filter, G)\n",
+    "connected_ways_for_special_nodes = get_connected_ways_for_special_nodes(special_nodes, ways_filter, G)\n",
     "\n",
     "# Nachbarn von speziellen Knoten ermitteln\n",
-    "neighbors_by_special_node = handle_special_degree_2_nodes(special_nodes, connected_ways, G)\n",
+    "neighbors_by_special_node = handle_special_degree_2_nodes(special_nodes, connected_ways_for_special_nodes, G)\n",
     "\n",
     "# Aktualisiere die node_ids der Straßen\n",
-    "filtered_data_multiple['node_ids'] = filtered_data_multiple.apply(update_node_ids, axis=1)\n",
+    "df_degree_2_nodes['node_ids'] = df_degree_2_nodes.apply(update_node_ids, axis=1)\n",
     "\n",
     "# Entfernen der Knoten mit Grad 2 aus den node_ids der Straßen\n",
-    "filtered_data_multiple['node_ids'] = filtered_data_multiple['node_ids'].apply(remove_degree_2_nodes)\n",
+    "df_degree_2_nodes['node_ids'] = df_degree_2_nodes['node_ids'].apply(remove_degree_2_nodes)\n",
     "\n",
     "# Entferne Knoten mit Grad 2 aus dem finalen Datensatz\n",
     "filtered_data_multiple = filtered_data_multiple[filtered_data_multiple['id'].isin(degree_2_node_ids) == False]"
