--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -958,6 +958,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Diagramm-Vergleich"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
