Analyzing whole dataset unterfranken + filtering with api request to city

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports und Datei"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -16,12 +23,13 @@
     "from sklearn.cluster import DBSCAN\n",
     "import numpy as np\n",
     "import os\n",
+    "import requests\n",
     "from collections import Counter\n",
     "from matplotlib.ticker import MaxNLocator\n",
     "from math import radians, cos, sin, asin, sqrt\n",
     "\n",
     "# Setze den Pfad zum Dataset\n",
-    "dataset_path = os.path.join(\"Datasets\", \"ringheim.osm\")\n",
+    "dataset_path = os.path.join(\"Datasets\", \"unterfranken-latest.osm\")\n",
     "filename = os.path.basename(dataset_path)\n",
     "title = filename.split('.')[0].capitalize()"
    ]
@@ -30,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Datensatz um alle Daten auszulesen"
+    "### Alle Daten aus dem Datensatz auslesen"
    ]
   },
   {
@@ -86,6 +94,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### API-Anfrage für die Längen- und Breitengrade der Städte"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# API-Anfrage um Bounding Box der Stadt zu bekommen\n",
+    "def get_bounding_box(city_name):\n",
+    "    url = f\"https://nominatim.openstreetmap.org/search?city={city_name}&format=json\"\n",
+    "    headers = {\n",
+    "        \"User-Agent\": \"Bachelorproject/1.0\"\n",
+    "    }\n",
+    "    response = requests.get(url, headers=headers)\n",
+    "    if response.status_code == 200:\n",
+    "        results = response.json()\n",
+    "        for result in results:\n",
+    "            if 'boundingbox' in result:\n",
+    "                bbox = result['boundingbox']\n",
+    "                return [float(coord) for coord in bbox]  \n",
+    "    raise ValueError(\"Bounding Box konnte nicht abgerufen werden.\")\n",
+    "    \n",
+    "city_name = \"Nilkheim\"    \n",
+    "bbox = get_bounding_box(city_name)\n",
+    "south, north, west, east = bbox\n",
+    "\n",
+    "df_filtered_nodes = df_osm[\n",
+    "    ((df_osm['latitude'] >= south) & (df_osm['latitude'] <= north)) &\n",
+    "    ((df_osm['longitude'] >= west) & (df_osm['longitude'] <= east))    \n",
+    "]\n",
+    "\n",
+    "df_filtered_nodes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Datensatz für Straßen"
    ]
   },
@@ -97,6 +145,18 @@
    "source": [
     "ways_filter = df_osm[(df_osm['type'] == 'way') & (df_osm['tagkey'] == 'highway')]\n",
     "ways_filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_ways = ways_filter[ways_filter['node_ids'].apply(lambda node_ids: any(node in df_filtered_nodes['id'].values for node in node_ids))]\n",
+    "\n",
+    "df_filtered = pd.concat([df_filtered_nodes, valid_ways])\n",
+    "df_filtered"
    ]
   },
   {
@@ -159,8 +219,8 @@
     "\n",
     "road_lengths = []\n",
     "\n",
-    "for index, way_row in ways_filter.iterrows():\n",
-    "    length = calculate_full_road_length(way_row, df_osm)\n",
+    "for index, way_row in valid_ways.iterrows():\n",
+    "    length = calculate_full_road_length(way_row, df_filtered)\n",
     "    if length is not None:\n",
     "        road_lengths.append({'way_id': way_row['id'], 'length': length})\n",
     "\n",
@@ -183,7 +243,7 @@
    "outputs": [],
    "source": [
     "all_node_ids = []\n",
-    "for node_ids_list in ways_filter['node_ids']:\n",
+    "for node_ids_list in valid_ways['node_ids']:\n",
     "    if node_ids_list is not None:\n",
     "        all_node_ids.extend(node_ids_list)\n",
     "\n",
@@ -191,9 +251,9 @@
     "\n",
     "nodes_referenced_multiple = {node_id for node_id, count in node_reference_count.items() if count > 1}\n",
     "\n",
-    "df_nodes_filtered_multiple = df_osm[(df_osm['type'] == 'node') & (df_osm['id'].isin(nodes_referenced_multiple))]\n",
+    "df_nodes_filtered_multiple = df_filtered[(df_filtered['type'] == 'node') & (df_filtered['id'].isin(nodes_referenced_multiple))]\n",
     "\n",
-    "filtered_data_multiple = pd.concat([ways_filter, df_nodes_filtered_multiple], ignore_index=True)\n",
+    "filtered_data_multiple = pd.concat([valid_ways, df_nodes_filtered_multiple], ignore_index=True)\n",
     "\n",
     "filtered_data_multiple"
    ]
@@ -219,7 +279,7 @@
     "        G.add_node(row['id'], pos=(row['longitude'], row['latitude']))\n",
     "\n",
     "# Kanten zum Graphen hinzufügen\n",
-    "for index, way in ways_filter.iterrows():\n",
+    "for index, way in valid_ways.iterrows():\n",
     "    node_ids_list = way['node_ids']\n",
     "    if node_ids_list is not None:\n",
     "        filtered_node_ids_list = [node_id for node_id in node_ids_list if G.has_node(node_id)]\n",
@@ -252,7 +312,7 @@
     "# edge_labels = nx.get_edge_attributes(G, 'street_name')\n",
     "# nx.draw_networkx_edge_labels(G, pos, edge_labels=edge_labels, font_size=8, font_color='red')\n",
     "\n",
-    "plt.title(title)\n",
+    "plt.title(city_name)\n",
     "plt.xlabel(\"Längengrad\")\n",
     "plt.ylabel(\"Breitengrad\")\n",
     "plt.show()"
@@ -335,7 +395,7 @@
     "                    neighbor_1, neighbor_2 = neighbors\n",
     "\n",
     "                    # Finde die zwei Straßen, die den Grad-2-Knoten referenzieren\n",
-    "                    referencing_ways = ways_filter[ways_filter['node_ids'].apply(lambda x: node_id in x)]\n",
+    "                    referencing_ways = valid_ways[valid_ways['node_ids'].apply(lambda x: node_id in x)]\n",
     "\n",
     "                    if len(referencing_ways) == 2:\n",
     "                        way_1, way_2 = referencing_ways.iloc[0], referencing_ways.iloc[1]\n",
@@ -351,8 +411,8 @@
     "                            way_1_node_ids.append(neighbor_1)\n",
     "\n",
     "                        # Aktualisiere die DataFrame-Zeilen\n",
-    "                        ways_filter.at[way_1.name, 'node_ids'] = way_1_node_ids\n",
-    "                        ways_filter.at[way_2.name, 'node_ids'] = way_2_node_ids\n",
+    "                        valid_ways.at[way_1.name, 'node_ids'] = way_1_node_ids\n",
+    "                        valid_ways.at[way_2.name, 'node_ids'] = way_2_node_ids\n",
     "\n",
     "        # Stelle sicher, dass die Rückgabewerte korrekt sind\n",
     "        return updated_node_ids if updated_node_ids else None\n",
@@ -409,7 +469,7 @@
     "        neighbors_by_special_node[node_id] = []\n",
     "        connected_node_ids = set()\n",
     "        for way_id in ways:\n",
-    "            way = ways_filter[ways_filter['id'] == way_id]\n",
+    "            way = valid_ways[valid_ways['id'] == way_id]\n",
     "            if not way.empty:\n",
     "                connected_node_ids.update(way.iloc[0]['node_ids'])\n",
     "\n",
@@ -426,7 +486,7 @@
     "    return special_nodes\n",
     "\n",
     "# Ermitteln der Straßen, die mit speziellen Grad-2-Knoten verbunden sind\n",
-    "def get_connected_ways_for_special_nodes(df_special_nodes, ways_filter, G):\n",
+    "def get_connected_ways_for_special_nodes(df_special_nodes, valid_ways, G):\n",
     "    connected_ways_by_node = {}\n",
     "\n",
     "    for _, node_row in df_special_nodes.iterrows():\n",
@@ -434,7 +494,7 @@
     "        connected_ways_by_node[node_id] = []\n",
     "        \n",
     "        # Finde Wege, die mit diesem speziellen Knoten verbunden sind\n",
-    "        for _, way_row in ways_filter.iterrows():\n",
+    "        for _, way_row in valid_ways.iterrows():\n",
     "            way_id = way_row['id']\n",
     "            node_ids_list = way_row['node_ids']\n",
     "            \n",
@@ -465,8 +525,8 @@
     "                    if len(referencing_ways) == 2:\n",
     "                        way_1_id, way_2_id = referencing_ways[0], referencing_ways[1]\n",
     "                        \n",
-    "                        way_1 = ways_filter[ways_filter['id'] == way_1_id].iloc[0]\n",
-    "                        way_2 = ways_filter[ways_filter['id'] == way_2_id].iloc[0]\n",
+    "                        way_1 = valid_ways[valid_ways['id'] == way_1_id].iloc[0]\n",
+    "                        way_2 = valid_ways[valid_ways['id'] == way_2_id].iloc[0]\n",
     "\n",
     "                        way_1_node_ids = list(way_1['node_ids']) if isinstance(way_1['node_ids'], list) else way_1['node_ids']\n",
     "                        way_2_node_ids = list(way_2['node_ids']) if isinstance(way_2['node_ids'], list) else way_2['node_ids']\n",
@@ -476,8 +536,8 @@
     "                        if neighbor_1 not in way_1_node_ids:\n",
     "                            way_1_node_ids.append(neighbor_1)\n",
     "\n",
-    "                        ways_filter.at[way_1.name, 'node_ids'] = way_1_node_ids\n",
-    "                        ways_filter.at[way_2.name, 'node_ids'] = way_2_node_ids\n",
+    "                        valid_ways.at[way_1.name, 'node_ids'] = way_1_node_ids\n",
+    "                        valid_ways.at[way_2.name, 'node_ids'] = way_2_node_ids\n",
     "        \n",
     "        return updated_node_ids if updated_node_ids else None\n",
     "    \n",
@@ -507,7 +567,7 @@
     "existing_node_ids = set(filtered_data_multiple[filtered_data_multiple['type'] == 'node']['id'])\n",
     "\n",
     "# Wege durchgehen und Kanten im Graphen hinzufügen\n",
-    "for _, row in ways_filter.iterrows():\n",
+    "for _, row in valid_ways.iterrows():\n",
     "    node_ids = row['node_ids']\n",
     "    if node_ids is not None:\n",
     "        valid_node_ids = [node_id for node_id in node_ids if node_id in existing_node_ids]\n",
@@ -528,7 +588,7 @@
     "# Spezielle Knoten mit Grad 2 finden\n",
     "nodes_degree_2 = [node for node, degree in G.degree() if degree == 2]\n",
     "node_way_mapping = {node_id: [] for node_id in nodes_degree_2}\n",
-    "for index, way in ways_filter.iterrows():\n",
+    "for index, way in valid_ways.iterrows():\n",
     "    node_ids_list = way['node_ids']\n",
     "    if node_ids_list is not None:\n",
     "        for node_id in nodes_degree_2:\n",
@@ -555,7 +615,7 @@
    "outputs": [],
    "source": [
     "# Straßen mit speziellen Knoten ermitteln\n",
-    "connected_ways_for_special_nodes = get_connected_ways_for_special_nodes(df_special_nodes, ways_filter, G)\n",
+    "connected_ways_for_special_nodes = get_connected_ways_for_special_nodes(df_special_nodes, valid_ways, G)\n",
     "\n",
     "# Nachbarn von speziellen Knoten ermitteln\n",
     "neighbors_by_special_node = handle_special_degree_2_nodes(df_special_nodes, connected_ways_for_special_nodes, G)\n",
@@ -599,7 +659,7 @@
     "        G.add_node(row['id'], pos=(row['longitude'], row['latitude']))\n",
     "\n",
     "# Kanten zum Graphen hinzufügen\n",
-    "for index, way in ways_filter.iterrows():\n",
+    "for index, way in valid_ways.iterrows():\n",
     "    node_ids_list = way['node_ids']\n",
     "    if node_ids_list is not None:\n",
     "        filtered_node_ids_list = [node_id for node_id in node_ids_list if G.has_node(node_id)]\n",
@@ -631,7 +691,7 @@
     "# edge_labels = nx.get_edge_attributes(G, 'street_name')\n",
     "# nx.draw_networkx_edge_labels(G, pos, edge_labels=edge_labels, font_size=8, font_color='red')\n",
     "\n",
-    "plt.title(title)\n",
+    "plt.title(city_name)\n",
     "plt.xlabel(\"Längengrad\")\n",
     "plt.ylabel(\"Breitengrad\")\n",
     "plt.show()"
@@ -739,7 +799,7 @@
     "        G.add_node(row['id'], pos=(row['longitude'], row['latitude']))\n",
     "\n",
     "# Kanten zum Graphen hinzufügen\n",
-    "for index, way in ways_filter.iterrows():\n",
+    "for index, way in valid_ways.iterrows():\n",
     "    node_ids_list = way['node_ids']\n",
     "    if node_ids_list is not None:\n",
     "        filtered_node_ids_list = [node_id for node_id in node_ids_list if G.has_node(node_id)]\n",
@@ -771,7 +831,7 @@
     "# edge_labels = nx.get_edge_attributes(G, 'street_name')\n",
     "# nx.draw_networkx_edge_labels(G, pos, edge_labels=edge_labels, font_size=8, font_color='red')\n",
     "\n",
-    "plt.title(title)\n",
+    "plt.title(city_name)\n",
     "plt.xlabel(\"Längengrad\")\n",
     "plt.ylabel(\"Breitengrad\")\n",
     "plt.show()"
@@ -813,7 +873,7 @@
     "    # Überprüfen, ob der Rand highway != 'residual' ist\n",
     "    is_dashed_highway = False\n",
     "    street_name = \"\"\n",
-    "    for street in ways_filter.itertuples():\n",
+    "    for street in valid_ways.itertuples():\n",
     "        if edge[0] in street.node_ids and edge[1] in street.node_ids:\n",
     "            street_name = street.tagvalue\n",
     "            # Highway-Kanten, die nicht 'residual' sind, werden gestrichelt\n",
@@ -883,7 +943,7 @@
     ")\n",
     "\n",
     "layout = go.Layout(\n",
-    "    title='Großostheim',\n",
+    "    title=city_name,\n",
     "    titlefont=dict(size=16),\n",
     "    showlegend=False,\n",
     "    hovermode='closest',\n",
@@ -923,7 +983,7 @@
     "fig = plt.figure(figsize=(8, 6))\n",
     "\n",
     "plt.bar(unique_degrees, counts, color='skyblue', edgecolor='black')\n",
-    "plt.title(\"Degree Histogram of\" + \" \" + title)\n",
+    "plt.title(\"Degree Histogram of\" + \" \" + city_name)\n",
     "plt.xlabel(\"Degree\")\n",
     "plt.ylabel(\"# of Nodes\")\n",
     "\n",
@@ -950,7 +1010,7 @@
     "# Erstelle das Histogramm\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.hist(df_road_length['length'], bins=30, color='skyblue', edgecolor='black')\n",
-    "plt.title('Verteilung der Straßenlänge'  + \" \" + title)\n",
+    "plt.title('Verteilung der Straßenlänge'  + \" \" + city_name)\n",
     "plt.xlabel('Straßenlänge (Meter)')\n",
     "plt.ylabel('Anzahl der Straßen')\n",
     "plt.grid(True)\n",
